<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JfCupsPrintService</string>
    <string name="title_activity_printer_list">JfCupsPrintService</string>
    <string name="about">About</string>
    <string name="addprinter">Add Printer</string>
    <string name="certificates">Certificates</string>
    <string name="default_port">631</string>
    <string name="title_activity_printer_add_edit">Edit Printer</string>
    <string name="nickname">Nickname</string>
    <string name="protocol">Protocol</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="queue">Queue Name</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="orientation">Orientation</string>
    <string name="extensions">Extensions</string>
    <string name="fittopage">Image fit page</string>
    <string name="jobid">Job Id</string>
    <string name="jobname">Job Name</string>
    <string name="justprint">Just print</string>
    <string name="isdefault">Default printer</string>
    <string name="importcert">Get Certificate</string>
    <string name="resolution">Resolution</string>
    <string name="save">Save</string>
    <string name="scanhost">Scan Hosts</string>
    <string name="scanmdns">Scan mDNS</string>
    <string name="showin">Show In</string>
	<string name="status">Status</string>
    <string name="title_activity_print_job">Print Settings</string>
    <string name="test">Test</string>
    <string name="title_activity_ppd_groups">Ppd Groups</string>
    <string name="title_activity_ppd_sections">Ppd Items</string>
    <string name="title_activity_printer_print_to">JfCupsPrintService&#8230;</string>
    <string name="title_activity_printer_print_default">JfCupsPrintService default</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_mime_types">Mime Types</string>
    <string name="title_activity_certificate">Certificates</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_advanced_settings">AdvancedSettingsActivity</string>
    <string name="title_activity_job_list">Jobs</string>

</resources>