<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:id = "@+id/jobPrinter" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#AAAAAA" >
        <TextView
            android:text="@string/jobid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:text="@string/jobname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
        <TextView
            android:text="@string/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
        </LinearLayout>
    <ListView
        android:id="@+id/jobsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
